<resources>
    <string name="app_name">Let Us Drink</string>
    
    <string name="filler_short">Loren ipsum</string>
    <string name="filler_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut faucibus sit amet arcu ac dictum. Praesent id dictum justo. </string>
    <string name="rouble_sign">₽</string>
    
    <string name="home">Home</string>
    <string name="assistant">Assistant</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="taxi">Taxi</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="open_hours_example">09:00 - 18:00</string>
    <string name="phone_sample">+7 (999) 999 99 99</string>
    <string name="website_sample">greentea.in</string>

</resources>
